# xiaomi-powerbank-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: deploy.yml
crates/powerbank-core/: Cargo.toml
crates/powerbank-core/src/: lib.rs
crates/powerbank-hid/: Cargo.toml
crates/powerbank-hid/src/: lib.rs
crates/powerbank-webhid/: Cargo.toml
crates/powerbank-webhid/src/: lib.rs
crates/xiaomi-pb-cli/: Cargo.toml
crates/xiaomi-pb-cli/src/: main.rs
crates/xiaomi-pb-gui/: Cargo.toml
crates/xiaomi-pb-gui/src/: main.rs
crates/xiaomi-pb-gui/web/: index.html
worker/: wrangler.toml
