[package]
name = "powerbank-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core protocol implementation for Xiaomi Powerbank Manager"

[dependencies]
async-trait.workspace = true
chrono.workspace = true
thiserror.workspace = true

[dev-dependencies]
futures.workspace = true
