[package]
name = "powerbank-hid"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Native HID transport for Xiaomi Powerbank Manager"

[dependencies]
async-trait.workspace = true
hidapi.workspace = true
powerbank-core.workspace = true
