[package]
name = "xiaomi-pb-gui"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Material GUI for Xiaomi power banks"

[[bin]]
name = "xiaomi-pb-gui"
path = "src/main.rs"

[dependencies]
futures.workspace = true
iced.workspace = true
material-ui-rs.workspace = true
powerbank-core.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
powerbank-hid.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
powerbank-webhid.workspace = true

